# autoware-playground

./: .gitignore  .gitmodules  AutowareDemoInstalation.md  MapCreation.md  PantherDemo.md  README.md  SimulationDemo.md  docker-compose.yml
Panther_simulator/simulator_Data/: ScriptingAssemblies.json
adehome/AutowareDemo/: .aderc  autoware.auto.foxy.repos
adehome/AutowareDemo/src/panther_description/: CMakeLists.txt  package.xml
adehome/AutowareDemo/src/panther_description/urdf/: panther.urdf
docs/: AutowareInstalationOLD.md  PROBLEMS.md  SimulationDemo.md
ouster_os1_panther_guide/: README.md
panther_autoware_demo/: CMakeLists.txt  package.xml
panther_autoware_demo/custom_params/: pc_filter_transform.param.yaml  vehicle_characteristics.param.yaml
panther_autoware_demo/urdf/: panther.urdf
panther_interface/: CMakeLists.txt  package.xml
panther_interface/include/lgsvl_interface/: panther_interface.hpp  panther_interface_node.hpp  visibility_control.hpp
panther_interface/include/panther_interface/: panther_interface.hpp  panther_interface_node.hpp
panther_interface/launch/: lgsvl.launch.py  lgsvl_vehicle_control_command.launch.py  panther_interface.launch.py
panther_interface/param/: lgsvl.param.yaml
panther_interface/src/: lgsvl_interface.cpp  lgsvl_interface_node.cpp  panther_interface.cpp  panther_interface_node.cpp
panther_interface/test/include/: test_lgsvl_interface.hpp
panther_interface/test/src/: test_lgsvl_interface.cpp
panther_real_demo/: CMakeLists.txt  PROBLEMS.md  package.xml
panther_sim_demo/: CMakeLists.txt  package.xml
(+89 files in other folders)
