<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panther_description</name>
  <version>1.0.0</version>
  <description>Contains launch files and configs to run different demos</description>
  <maintainer email="nicolas.duc@husarion.com">Nicolas Duc</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
